# qtintegration

./: .gitattributes  .gitmodules  .qmake.conf  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake  platformtheme.pro  platformtheme.qbs
.github/workflows/: build.yml  checks.yml  copr.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
cmake/: FindXkbcommon.cmake
qbs/modules/qbsbuildconfig/: qbsbuildconfig.qbs
scripts/: make-release-archive.sh
src/: CMakeLists.txt  hintssettings.cpp  hintssettings.h  liritheme.cpp  liritheme.h  liritheme_p.cpp  liritheme_p.h  logging_p.cpp  logging_p.h  main.cpp  resourcehelper.cpp  resourcehelper.h  src.qbs
src/plugins/decorations/material/: CMakeLists.txt  materialdecoration.cpp  materialdecoration.h  plugin.cpp
src/plugins/platformtheme/: CMakeLists.txt  hintssettings.cpp  hintssettings.h  liritheme.cpp  liritheme.h  logging_p.cpp  main.cpp  resourcehelper.cpp  resourcehelper.h
src/plugins/shellintegration/layershell/: CMakeLists.txt  liri-layer-shell.json  qwaylandlayershell.cpp  qwaylandlayershell_p.h  qwaylandlayershellintegration.cpp  qwaylandlayershellintegration_p.h  qwaylandlayershellintegrationplugin.cpp  qwaylandlayersurface.cpp  qwaylandlayersurface_p.h  qwaylandxdgshell.cpp  qwaylandxdgshell_p.h  qwaylandxdgsurface.cpp  qwaylandxdgsurface_p.h
src/plugins/shellintegration/lockscreen/: CMakeLists.txt  ext-session-lock-v1.xml.license  liri-lockscreen.json  qwaylandextsessionlock.cpp  qwaylandextsessionlock_p.h  qwaylandlockscreenintegration.cpp  qwaylandlockscreenintegration_p.h  qwaylandlockscreenintegrationplugin.cpp
